src/objects/JBCXM__UsageData__c.object
<CustomObject>
    <fields>
        <fullName>CTAs_Closed_Total__c</fullName>
        <description>created by the DATA</description>
        <label>CTAs_Closed_Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTAs_Created_Total__c</fullName>
        <description>created by the DATA</description>
        <label>CTAs_Created_Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Tickets_Closed__c</fullName>
        <description>created by the DATA</description>
        <label>Cases_Tickets_Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Tickets_Created__c</fullName>
        <description>created by the DATA</description>
        <label>Cases_Tickets_Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Tickets_by_Average_Age__c</fullName>
        <description>created by the DATA</description>
        <label>Cases_Tickets_by_Average_Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Tickets_by_Priority__c</fullName>
        <description>created by the DATA</description>
        <label>Cases_Tickets_by_Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Events_Lost__c</fullName>
        <description>created by the DATA</description>
        <label>Events_Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Events_Success__c</fullName>
        <description>created by the DATA</description>
        <label>Events_Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usage Data</relationshipLabel>
        <relationshipName>Usage_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__InstanceId__c</fullName>
        <label>Instance Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__InstanceName__c</fullName>
        <label>Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__User__c</fullName>
        <label>User</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Utilization__c</fullName>
        <label>Utilization%</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__WeekLabel__c</fullName>
        <description>To store the week label based on the week configuration when adoption data granularity on weekly</description>
        <label>Week Label</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunities_Lost__c</fullName>
        <description>created by the DATA</description>
        <label>Opportunities_Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_Success__c</fullName>
        <description>created by the DATA</description>
        <label>Opportunities_Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risks_Lost__c</fullName>
        <description>created by the DATA</description>
        <label>Risks_Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risks_Success__c</fullName>
        <description>created by the DATA</description>
        <label>Risks_Success</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Usage Data</label>
    <nameField>
        <label>Usage Data Aggregation Level  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>